# workout-util

./: Cargo.toml  LICENSE  PLAN.md  README.md  data.db-shm  data.db-wal
migrations/: 20260212153000_init.sql  init.sql
src/: app.rs  config.rs  context.rs  enums.rs  exercise.rs  main.rs  timer.rs  workout.rs
src/app/: exercises_page.rs  mod.rs  start_workout_page.rs  utils.rs  workouts_page.rs  workouts_plans_page.rs
src/client/: app.rs  app_utils.rs  mod.rs
src/core/: enums.rs  exercise.rs  mod.rs  workout.rs  workout_log.rs
src/core/client/: app.rs  mod.rs
src/core/exercise/: exercise.rs  exercise_dto.rs  exercise_entity.rs  exercise_repo.rs  exercise_service.rs  exercises_page.rs  mod.rs
src/core/timer/: metronome.rs
src/core/workout/: mod.rs  workout.rs  workout_dto.rs  workout_entity.rs  workout_repo.rs  workout_service.rs
src/core/workout_log/: mod.rs  (+5 more)
src/db/: connection.rs  migrations.rs  mod.rs  pagination_support.rs
src/domains/: exercise.rs  mod.rs  timer.rs
src/exercise/: exercise_dto.rs  exercise_entity.rs  exercise_repo.rs  exercise_service.rs  exercises_page.rs  mod.rs
src/timer/: audio_engine.rs  countdown_timer.rs  emom_timer.rs  metronome.rs  mod.rs  rest_timer.rs
src/workout/: enums.rs  exercise.rs  exercise_dto.rs  mod.rs  start_workout_page.rs  workout.rs  workout_dto.rs  workout_entity.rs  workout_log.rs  workout_repo.rs  workout_service.rs  workouts_page.rs
src/workout_log/: mod.rs  workout_log_dto.rs  workout_log_entity.rs  workout_log_repo.rs  workout_log_service.rs  workout_logs_page.rs  workouts_page.rs
