[package]
name = "workout-util"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"]}
chrono = { version = "0.4.43", features = ["serde"] }
eframe = "0.33.3"
rodio = { version = "0.21.1", features = ["default"] }
